# rust-project

./: .gitignore  README.md
final-project/: Cargo.toml  Final_Documentation_Lopez.docx  README.md  database.db
final-project/static/: Background.css  Home.css
final-project/templates/: Dashboard.html.tera  HomePage.html.tera  NewUser.html.tera  UpdatePage.html.tera  base.html.tera  userbase.html.tera
final-project/templates/FoodPages/: ApplePage.html.tera  BananaPage.html.tera  BroccoliPage.html.tera  GrapePage.html.tera  OrangePage.html.tera  WatermelonPage.html.tera
final-project/templates/Trades/: TradeSuccess.html.tera
