[package]
name = "final-project"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "=0.5.0-rc.3", features = ["tls", "mtls", "json", "secrets"] }
serde = { version = "1.0", features = ["derive"] } # See https://rocket.rs/v0.5-rc/guide/requests/#json
#chrono = "0.4"
sqlx = { version = "0.5.13", default-features = false, features = [
    "migrate",
    "any",
    "offline",
    "runtime-tokio-rustls",
] }
tokio = { version = "1.12.0", features = ["full"] } # for our async runtime    


[dependencies.rocket_dyn_templates]
version = "=0.1.0-rc.3"
features = ["handlebars", "tera"]

[dependencies.rocket_auth]
version = "0.4.0"
features = ["sqlx-sqlite"]

